--- a/PedidoVenda/src/main/webapp/WEB-INF/template/pedidos/BotoesPedido.xhtml
+++ b/PedidoVenda/src/main/webapp/WEB-INF/template/pedidos/BotoesPedido.xhtml
@@ -7,7 +7,7 @@
 	<p:toolbar style="margin-top: 20px">
 		<p:toolbarGroup>
 			<p:button value="Novo" outcome="/pedidos/CadastroPedido"/>
-			<p:commandButton value="Salvar" id="botaoSalvar"/>				
+			<p:commandButton value="Salvar" id="botaoSalvar" action="#{cadastroPedidoBean.salvar()}"/>				
 		</p:toolbarGroup>
 		<p:toolbarGroup align="right">
 			<p:commandButton value="Emitir"/>
